@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-14T00:31:55Z",
+  "timestamp" : "2022-11-14T08:09:22Z",
   "count_outdated" : 1919,
   "uniques_outdated" : 617,
-  "count" : 1935,
-  "uniques" : 625,
+  "count" : 1936,
+  "uniques" : 626,
   "clones" : [
     {
       "timestamp": "2022-10-31T00:00:00Z",
@@ -46,6 +46,13 @@
       "count_minmax": [ 4, 5 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-11-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
