@@ -1,5 +1,5 @@
 {
-  "count": 16,
+  "count": 17,
   "uniques": 5,
   "clones": [
     {
@@ -31,6 +31,11 @@
       "timestamp": "2022-11-13T00:00:00Z",
       "count": 5,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-11-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
